apps/web/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: web
spec:
  selector:
    app: oauth2-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4180
  type: ClusterIP
